[tool.poetry]
name = "metalbender"
version = "0.1.0"
description = ""
authors = ["Afterstone <invisiblex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
python-dotenv = "^1.0.0"
google-cloud-secret-manager = "^2.16.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
